# Korean_Constitution_Q-A

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
