[tool.poetry]
name = "my-langchain-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "my_langchain_project"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.27"
openai = "^1.102.0"
streamlit = "^1.49.1"
langchain-openai = "^0.3.32"
python-dotenv = "^1.1.1"
langchain-community = "^0.3.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
